kubernetes/media/sonarr-anime/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr-anime
  namespace: media
  labels:
    app.kubernetes.io/name: sonarr-anime
spec:
  selector:
    app.kubernetes.io/name: sonarr-anime
  ports:
    - name: http
      port: 8989
      targetPort: http
