kubernetes/media/sonarr-anime/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sonarr-anime
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`sonarr-anime.home.mcnees.me`) || Host(`sonarr-anime-k8s.home.mcnees.me`)
      kind: Rule
      middlewares:
        - name: oauth2-proxy
          namespace: auth
      services:
        - name: sonarr-anime
          port: 8989
  tls:
    secretName: legacy-home-wildcard-tls
